desktop update for landing page /*just a tad frustrated I was unable to solve the gap under the header, I also ran into some issues when I was working on mobile view due to my monitor being at a lower res

--- a/landing-page/styles/styles.css
+++ b/landing-page/styles/styles.css
@@ -309,3 +309,97 @@ footer p{
 /*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /*************************************************************************************************************************************************************************/
 
+@media only screen and (min-width: 1280px) {
+
+    
+    .main-grid-container{
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1fr 1fr;
+        align-items: start;
+    }
+
+    header{
+        width: 536px;
+        height: 292px;
+        grid-row-start: 1;
+        z-index: 2;
+
+    }
+    h1{
+        font-size: 60pt;
+    }
+    h2{
+        font-size: 40pt;
+    }
+    h3{
+        text-align: left;
+    }
+
+    .scooter{
+        margin-left: -20rem;
+        height: auto;
+        width: 819.36px;
+        grid-column-start: 2;
+        grid-row-start: 1;
+        z-index: 1;
+    }
+    .form1{
+        margin-left: -10rem;
+        grid-column-start: 3;
+        width: 430px;
+        z-index: 2;
+    }
+    .foot{
+        display: grid;
+        margin-top: -50em;
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: 1fr 1fr;
+    }
+    .calc-container{
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 10px;
+    }
+    .hours{
+        margin-top: -2.5em;
+        margin-bottom: 2.5em;
+        grid-row: 3 / span 1;
+        grid-column: 1;
+        width: 122px;
+    }
+    
+    .city{
+        margin-top: -2.5em;
+        margin-bottom: 2.5em;
+        grid-row: 3 / span 1;
+        grid-column: 3;
+        width: 260px;
+    }
+    .red-button{
+        margin-top: -1.70em;
+        grid-row: 3;
+        grid-column: 5;
+        width: 200px;
+    }
+    h4{
+        grid-row: 1;
+        grid-column: 1 / span 10;
+    }
+    footer p{
+        margin-top: -1em;
+        grid-row: 2;
+        grid-column: 1 / span 10;
+    }
+    .social-media-foot{
+        margin-top: -7.5em;
+        grid-row: 3;
+        grid-column: 8 / span 2;
+        width: 260px;
+        display: flex;
+        padding-top: 3em;
+        justify-content: space-around;
+    }
+
+}
